# fast-api-image-documentation-classifier

./: .env.example  Dockerfile  README.md  alembic.ini  app.db  docker-compose.yml  garage.toml  pyproject.toml
.github/agents/: python-type-checker.agent.md
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  main.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/classification/: extractor.py  grouper.py  pipeline.py
app/groups/: router.py  schemas.py
app/images/: router.py
app/jobs/: router.py  schemas.py  service.py
app/models/: __init__.py  group.py  image.py  job.py  user.py
app/storage/: s3.py
scripts/: init-garage.sh
tests/: conftest.py  test_auth.py  test_groups.py  test_images.py  test_jobs.py
